--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
-    <link rel="icon" href="./svg/favicon (1).svg" type="image/svg+xml" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="./svg/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="./svg/favicon.png">
     <script src="./scripts/set-theme.js"></script>
@@ -57,8 +57,8 @@
             <span class="card__item_watermark">&lt;/HTML&gt;</span>
             <img 
               class="card__item_img image1"
-              src="./images/image (2).svg"
-              alt=" фургон стоит перед деревом ночью и облака">
+              src="./images/image.svg"
+              alt="фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
             <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
@@ -86,7 +86,7 @@
             <span class="card__item_watermark">&lt;/HTML&gt;</span>
             <img 
               class="card__item_img image2"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -113,10 +113,10 @@
             1 спринт: А если не получится?
           </h2>
           <div class="card__item_watermark__and__img">
-            <span class="card__item_watermark">&lt;/HTML&gt;</span>
+            <span class="card__item_watermark">&lt;css&gt;</span>
             <img 
               class="card__item_img image3"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -143,10 +143,10 @@
             2 спринт: Погоня за идеалом
           </h2>
           <div class="card__item_watermark__and__img">
-            <span class="card__item_watermark">&lt;/HTML&gt;</span>
+            <span class="card__item_watermark">&lt;desigions&gt;</span>
             <img 
               class="card__item_img image4"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -173,10 +173,10 @@
             2 спринт: О тех, кто рядом
           </h2>
           <div class="card__item_watermark__and__img">
-            <span class="card__item_watermark">&lt;/HTML&gt;</span>
+            <span class="card__item_watermark">care</span>
             <img 
               class="card__item_img image5"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -203,10 +203,10 @@
             3 спринт: Обходные стратегии
           </h2>
           <div class="card__item_watermark__and__img">
-            <span class="card__item_watermark">&lt;/HTML&gt;</span>
+            <span class="card__item_watermark">&lt;support&gt;</span>
             <img 
               class="card__item_img image6"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -233,10 +233,10 @@
             3 спринт: Когда опускаются руки
           </h2>
           <div class="card__item_watermark__and__img">
-            <span class="card__item_watermark">&lt;/HTML&gt;</span>
+            <span class="card__item_watermark">&lt;lifes-style: none;&gt;</span>
             <img 
               class="card__item_img image7"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -263,10 +263,10 @@
             «Сейчас я здесь»
           </h2>
           <div class="card__item_watermark__and__img">
-            <span class="card__item_watermark">&lt;/HTML&gt;</span>
+            <span class="card__item_watermark">&lt;experience&gt;</span>
             <img 
               class="card__item_img image8"
-              src="./images/image (2).svg"
+              src="./images/image.svg"
               alt=" фургон стоит перед деревом ночью и облака">
           </div>
           <div class="card__item__text">
@@ -295,7 +295,7 @@
       aria-controls="dialog-id" class="button__save__memory">
       <svg 
       class="floppy__img">
-        <use href="/svg/floppy1.svg#floppy1">
+        <use href="/svg/floppy1.svg#floppy1"></use>
       </svg>         
   <p class="button__text">Сохранить на память</p> 
       </button>
@@ -305,7 +305,7 @@
         <div class="window__img">
           <svg 
           class="window__floppy__img">
-            <use href="svg/floppy.svg#floppy">
+            <use href="svg/floppy.svg#floppy"></use>
           </svg>
           <p class="window__text">Вставьте дискету, чтобы продолжить</p>
         </div>
