--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       class="floppy__img">
         <use href="/svg/floppy1.svg#floppy1"></use>
       </svg>         
-  <span class="button__text">Сохранить на память</ы> 
+       <span class="button__text">Сохранить на память</span> 
       </button>
     </footer>
     <dialog id="dialog-id" class="window">
